--- a/templates/1)Page.html
+++ b/templates/1)Page.html
@@ -6,12 +6,31 @@
 
 {% block body %}
     <form method="POST">
-        <label for="n">Enter N:</label>
-        <input type="number" id="n" name="n">
+        <label for="pass">Enter N:</label>
+        <input type="text" id="pass" name="pass">
         <input type="submit" value="Submit" placeholder="Submit"><br><br>
     </form>
 
-    {% if noun_freq %}
-        {{noun_freq}}
-    {% endif %}
+<!--    {% if noun_freq %}-->
+<!--        {{noun_freq}}-->
+<!--    {% endif %}-->
+    <div class="container">
+          <form action="/action_page.php">
+            <label for="usrname">Username</label>
+            <input type="text" id="usrname" name="usrname" required>
+
+            <label for="psw">Password</label>
+          <  input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+
+            <input type="submit" value="Submit">
+          </form>
+    </div>
+
+    <div id="message">
+      <h3>Password must contain the following:</h3>
+      <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+      <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+      <p id="number" class="invalid">A <b>number</b></p>
+      <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+    </div>
 {% endblock %}
