--- a/templates/2)Page.html
+++ b/templates/2)Page.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <form method="POST">
-        <label for="text">Enter characters (without space):</label>
+        <label for="text">Enter html text:</label>
         <input type="text" id="text" name="text">
         <input type="submit" value="Submit" placeholder="Submit"><br><br>
     </form>
