--- a/templates/1)Page.html
+++ b/templates/1)Page.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block body %}
-    <form method="POST">
-        <label for="pass">Enter N:</label>
-        <input type="text" id="pass" name="pass">
-        <input type="submit" value="Submit" placeholder="Submit"><br><br>
-    </form>
+<!--    <form method="POST">-->
+<!--        <label for="pass">Enter N:</label>-->
+<!--        <input type="text" id="pass" name="pass">-->
+<!--        <input type="submit" value="Submit" placeholder="Submit"><br><br>-->
+<!--    </form>-->
 
 <!--    {% if noun_freq %}-->
 <!--        {{noun_freq}}-->
@@ -20,7 +20,7 @@
             <input type="text" id="usrname" name="usrname" required>
 
             <label for="psw">Password</label>
-          <  input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+            <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
 
             <input type="submit" value="Submit">
           </form>
