--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <nav>
-<!--    <a href="/page1/">10)Page</a><br><br>-->
+    <a href="/page1/">10)Page</a><br><br>
     <a href="/page2/">11)Page</a><br><br>
 <!--    <a href="/page3/">12)Page</a><br><br>-->
 <!--    <a href="/page4/">13)page</a><br><br>-->
